KNOX-1020 - Minor code improvements